# shrtl-be

./: .gitignore  Cargo.toml  Dockerfile  config.yaml
src/: main.rs
src/controllers/: create_link_controller.rs  delete_link_controller.rs  get_link_controller.rs  link_controller.rs  mod.rs
src/utils/: links.rs
