[package]
name = "short-link-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = {version="4", features=["openssl"] }
actix-utils = "3.0.1"
openssl = { version = "0.10" }
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
postgres-openssl = "0.5.1"
url = "2"
serde = { version = "1", features = ["derive"] }
deadpool-postgres = "0.10"
config = "0.13"
dotenv = "0.15"
uuid = { version = "1.3", features = ["v4"] }
serde_json = "1.0"
actix-cors = "0.7.1"
futures-util = "0.3.31"
secrecy = "0.8"
