[package]
name = "short-link-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4" }
actix-utils = "3.0.1"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
url = "2"
serde = { version = "1", features = ["derive"] }
deadpool-postgres = { version = "0.10", features = ["serde"] }
config = "0.13"
dotenv = "0.15"
uuid = { version = "1.3", features = ["v4"] }
serde_json = "1.0"
actix-cors = "0.7.1"
futures-util = "0.3.31"
secrecy = "0.8"
